--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+  jackson:
+    serialization:
+      indent_output: true
 
 
 
